--- a/artemisa-front/src/assets/css/main.css
+++ b/artemisa-front/src/assets/css/main.css
@@ -325,3 +325,6 @@ th ion-icon {font-size: 11px;}
   }
   .was-validated .form-select:invalid, .form-select.is-invalid, .was-validated .form-control:invalid, .form-control.is-invalid {
 border-color: #dc3545!important;}
+.input-file-btn{align-items: center; height: 164px; text-align: center; display: flex; text-align-last: center; position: relative; border-radius: 13px; cursor: pointer; max-width: 164px; flex-direction: column; justify-content: center; grid-gap: 16px; color: black; font-size: 13px; text-transform: uppercase; background: linear-gradient(#fff,#fff) padding-box, /*this is your grey background*/ linear-gradient(45deg, #005dd1, #a380f7) border-box; padding: 10px; border: 2px solid transparent;}
+.input-file-btn ion-icon{font-size: 60px;}
+input.file[type="file"]{display: none;}
