--- a/artemisa-front/src/app/pages/orders/orders.page.html
+++ b/artemisa-front/src/app/pages/orders/orders.page.html
@@ -1,9 +1,47 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>orders</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content id="ion-content">
+  <div id="page-container">
+    <div class="container pb-5 pt-3">
+      <div class="row pb-3">
+        <div class="col-md-12 col-lg-12 pb-3">
+          <h4><b>Administrar Pedidos</b></h4>
+          <h6>En esta pestaña se podrá visualizar, modificar y eliminar Pedidos.</h6>
+        </div>
+        <div class="col-md-12 col-lg-12">
+          <div class="row">
+            <div class="col-md-4 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counter.p}}<br />
+                    <ion-chip color="warning"> Pendientes </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counter.c}}<br />
+                    <ion-chip color="success"> Completados </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counter.t}}<br />
+                    <ion-chip color="primary"> Total </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3">
+            <div class="card-body">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </ion-content>
